--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
         <div class="col col-2"></div>
         <div class="col col-8">
             <h1 class="text-header text-center">TCNJ Catholic Campus Ministry</h1>
+            <h2 class="text-header text-center sh-header">Sunday Mass - 7:00PM, Spiritual Center</h2>
+            <h2 class="text-header text-center sh-header">Confession: Sundays @ 6:30PM (or by appointment), Spiritual Center</h2>
+            <h2 class="text-header text-center sh-header">Living Our Faith Together (LOFT): Tuesdays @ 8:30PM, Education Building 206</h2>
         </div>
         <div class="col col-2"></div>
+    </div>
+    <div class="row content" id="a">
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="scripts.js"></script>
