--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>TCNJ Catholic Campus Ministry</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 </head>
 <body>
     <div class="row" id="header">
@@ -18,8 +19,119 @@
         </div>
         <div class="col col-2"></div>
     </div>
+    <br>
+    <div class="row" id="sha">
+        <div class="col col-4"></div>
+        <div class="col col-4">
+            <h2 class="text-subheader text-center">Welcome to CCM!</h2>
+        </div>
+        <div class="col col-4"></div>
+    </div>
+    <br>
     <div class="row content" id="a">
-
+        <div class="col col-1"></div>
+        <div class="col col-4">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d639.9839097471511!2d-74.77504136341166!3d40.26922611471117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3e2a9f06f5ba9%3A0x382acc10ec394fac!2sMetzger%20Dr%2C%20Ewing%20Township%2C%20NJ%2008638!5e0!3m2!1sen!2sus!4v1715958185615!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="col col-6">
+            <h4 class="text-content">Catholic Campus Ministry brings the message of the Gospel and the Catholic faith to the TCNJ community. We provide a variety of religious programs, services, and 
+                activities to meet TCNJ students' spiritual needs.
+                <br>
+                CCM offers weekend Mass on campus at TCNJ's Spiritual Center, located across from Norsworthy Hall on D Street. The ministry has the full-time services of a priest/chaplain, supported 
+                through the Diocese of Trenton.
+                <br>
+                Check out below to learn more about what we do!</h4>
+        </div>
+        <div class="col col-1"></div>
+    </div>
+    <br>
+    <div class="row" id="shb">
+        <div class="col col-4"></div>
+        <div class="col col-4">
+            <h2 class="text-subheader text-center">What's CCM up to?</h2>
+        </div>
+        <div class="col col-4"></div>
+    </div>
+    <br>
+    <div class="row content" id="b">
+        <div class="col col-1"></div>
+        <div class="col col-6">
+            <h4 class="text-content">
+                <p>Service Projects</p>
+                We host service projects to benefit our local community. Our common projects include making PB&Js for distribution, assembling Thanksgiving and Easter baskets, and coloring print-outs 
+                for children in hospitals.
+                <br>
+                <p>Discussion Group</p>
+                Living Our Faith Together (LOFT) is our weekly discussion group meeting where we talk about different faith-based topics. Our meetings are a great way to find community within our 
+                campus. All are welcome!
+                <br>
+                <p>Retreats</p>
+                We host retreats as a space for our students to connect outside of Mass. We take part in social games, lunch, Mass, prayer, the rosary, and Adoration.
+            </h4>
+        </div>
+        <div class="col col-4">
+            <img src="img/CCM PBJ 2.png" alt="">
+        </div>
+        <div class="col col-1"></div>
+    </div>
+    <br>
+    <div class="row" id="shc">
+        <div class="col col-4"></div>
+        <div class="col col-4">
+            <h2 class="text-subheader text-center">Pic Section!</h2>
+        </div>
+        <div class="col col-4"></div>
+    </div>
+    <br>
+    <div class="row content" id="c">
+        <div class="col col-1"></div>
+        <div class="col col-3 text-center">
+            <img src="img/CCM Bascilica.png" alt="">
+            <br>
+            <br>
+            <br>
+            <img src="img/CCM Music Ministry.jpg" alt="">
+        </div>
+        <div class="col col-4 text-center">
+            <img src="img/CCM Basket Group.png" alt="">
+            <br>
+            <br>
+            <img src="img/CCM Bishop.png" alt="">
+            <br>
+            <br>
+            <img src="img/CCM Bishop Group.png" alt="">
+        </div>
+        <div class="col col-3 text-center">
+            <img src="img/CCM PBJ.png" alt="">
+            <br>
+            <br>
+            <br>
+            <img src="img/CCM Fair.png" alt="">
+        </div>
+        <div class="col col-1"></div>
+    </div>
+    <br>
+    <div class="row" id="shd">
+        <div class="col col-4"></div>
+        <div class="col col-4">
+            <h2 class="text-subheader text-center">Contact us</h2>
+        </div>
+        <div class="col col-4"></div>
+    </div>
+    <br>
+    <div class="row content" id="d">
+        <div class="col col-1"></div>
+        <div class="col col-6">
+            <h4 class="text-content">
+                Follow us on Instagram! @ccm.tcnj
+                <br>
+                Email us to join our weekly newsletter! ccm@tcnj.edu
+                <br>
+                Searching for a Mass near you? Check out <a href="https://catholicmasstime.org/">catholicmasstime.org</a>!
+            </h4>
+        </div>
+        <div class="col col-4"></div>
+        <div class="col col-1"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="scripts.js"></script>
