--- a/index.html
+++ b/index.html
@@ -142,7 +142,20 @@
         <div class="col col-1"></div>
     </div>
     <div class="row" id="footer">
-        
+        <div class="col col-1"></div>
+        <div class="col col-3">
+            <h4 class="text-header text-footer"></h4>
+            <h6 class="text-footer"></h6>
+        </div>
+        <div class="col col-4">
+            <h4 class="text-header text-footer"></h4>
+            <h6 class="text-footer"></h6>
+        </div>
+        <div class="col col-3">
+            <h4 class="text-header text-footer"></h4>
+            <h6 class="text-footer"></h6>
+        </div>
+        <div class="col col-1"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
