--- a/index.html
+++ b/index.html
@@ -28,12 +28,16 @@
         <div class="col col-4"></div>
     </div>
     <br>
-    <div class="row content mb-5" id="a">
+    <div class="row content mb-5" id="aa">
         <div class="col col-1"></div>
-        <div class="col col-4">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d639.9839097471511!2d-74.77504136341166!3d40.26922611471117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3e2a9f06f5ba9%3A0x382acc10ec394fac!2sMetzger%20Dr%2C%20Ewing%20Township%2C%20NJ%2008638!5e0!3m2!1sen!2sus!4v1715958185615!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="col col-10">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d639.9839097471511!2d-74.77504136341166!3d40.26922611471117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3e2a9f06f5ba9%3A0x382acc10ec394fac!2sMetzger%20Dr%2C%20Ewing%20Township%2C%20NJ%2008638!5e0!3m2!1sen!2sus!4v1715958185615!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <div class="col col-6">
+        <div class="col col-1"></div>
+    </div>
+    <div class="row content mb-5" id="ab">
+        <div class="col col-1"></div>
+        <div class="col col-10">
             <h4 class="text-content">Catholic Campus Ministry brings the message of the Gospel and the Catholic faith to the TCNJ community. We provide a variety of religious programs, services, and 
                 activities to meet TCNJ students' spiritual needs.
                 <br>
@@ -43,6 +47,7 @@
                 Check out below to learn more about what we do!</h4>
         </div>
         <div class="col col-1"></div>
+    </div>
     </div>
     <br>
     <div class="row" id="shb">
@@ -83,7 +88,7 @@
     <div class="row" id="shc">
         <div class="col col-4"></div>
         <div class="col col-4">
-            <h2 class="text-subheader text-center">Pic Section!</h2>
+            <h2 class="text-subheader text-center">Pics!</h2>
             <!-- make uniform size -->
         </div>
         <div class="col col-4"></div>
