--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <div class="row" id="header">
-        <div class="col col-2"></div>
-        <div class="col col-8">
+        <div class="col col-1"></div>
+        <div class="col col-10">
             <h1 class="text-header text-center">TCNJ Catholic Campus Ministry</h1>
-            <h2 class="text-header text-center sh-header">Sunday Mass - 7:00PM, Spiritual Center</h2>
+            <h2 class="text-header text-center sh-header">Sunday Mass: 7:00PM, Spiritual Center</h2>
             <h2 class="text-header text-center sh-header">Confession: Sundays @ 6:30PM (or by appointment), Spiritual Center</h2>
             <h2 class="text-header text-center sh-header">Living Our Faith Together (LOFT): Tuesdays @ 8:30PM, Education Building 206</h2>
         </div>
-        <div class="col col-2"></div>
+        <div class="col col-1"></div>
     </div>
     <br>
     <div class="row" id="sha">
@@ -28,13 +28,6 @@
         <div class="col col-4"></div>
     </div>
     <br>
-    <div class="row content mb-5" id="aa">
-        <div class="col col-1"></div>
-        <div class="col col-10">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d639.9839097471511!2d-74.77504136341166!3d40.26922611471117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3e2a9f06f5ba9%3A0x382acc10ec394fac!2sMetzger%20Dr%2C%20Ewing%20Township%2C%20NJ%2008638!5e0!3m2!1sen!2sus!4v1715958185615!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <div class="col col-1"></div>
-    </div>
     <div class="row content mb-5" id="ab">
         <div class="col col-1"></div>
         <div class="col col-10">
@@ -45,9 +38,9 @@
                 through the Diocese of Trenton.
                 <br>
                 Check out below to learn more about what we do!</h4>
+            </div>
+            <div class="col col-1"></div>
         </div>
-        <div class="col col-1"></div>
-    </div>
     </div>
     <br>
     <div class="row" id="shb">
@@ -80,7 +73,6 @@
             <br>
             <br>
             <img src="img/CCM Bishop Group.png" alt="" class="non-pic-section">
-            <p class="caption text-center">After Mass with Bishop David O'Connell</p>
         </div>
         <div class="col col-1"></div>
     </div>
@@ -136,6 +128,14 @@
             <h2 class="text-subheader text-center">Contact us</h2>
         </div>
         <div class="col col-4"></div>
+    </div>
+    <br>
+    <div class="row content mb-5" id="aa">
+        <div class="col col-1"></div>
+        <div class="col col-10">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d639.9839097471511!2d-74.77504136341166!3d40.26922611471117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3e2a9f06f5ba9%3A0x382acc10ec394fac!2sMetzger%20Dr%2C%20Ewing%20Township%2C%20NJ%2008638!5e0!3m2!1sen!2sus!4v1715958185615!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="col col-1"></div>
     </div>
     <br>
     <div class="row content mb-5" id="d">
